@@ -63,6 +63,7 @@ endif()
 
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 
+option(EASYBUILD "find and use dependencies on availability (ignores other flags)" OFF)
 option(ZLIB "should zlib be linked" ON)
 option(READLINE "should readline be linked" ON)
 option(GMP "should gmp be linked" ON)
@@ -103,9 +104,9 @@ set(SYM bliss CACHE STRING "options for symmetry computation")  #create the vari
 set_property(CACHE SYM PROPERTY STRINGS bliss none )  #define list of values GUI will offer for the variable
 
 #search the selected symmetry computation program
-message(STATUS "Finding symmetry computation program \"${SYM}\"")
 set(BLISS_TARGET "")
 if(SYM STREQUAL "bliss")
+    message(STATUS "Setting up Bliss")
     set(sym symmetry/compute_symmetry_bliss.cpp)
 
     # modify configuration for bliss
@@ -285,11 +286,17 @@ set(WITH_SCIPDEF on)
 set(CMAKE_CXX_STANDARD 14)
 
 # ZLIB
-if(ZLIB)
+if(ZLIB OR EASYBUILD)
     message(STATUS "Finding ZLIB")
     if(NOT TARGET ZLIB::ZLIB)
-        find_package(ZLIB REQUIRED)
+        if(EASYBUILD)
+            find_package(ZLIB)
+        else()
+            find_package(ZLIB REQUIRED)
+        endif()
     endif()
+endif()
+if(ZLIB_FOUND)
     message(STATUS "Finding ZLIB - found")
     set(SCIP_WITH_ZLIB ON)
 else()
@@ -298,9 +305,15 @@ else()
 endif()
 
 # Readline
-if(READLINE)
+if(READLINE OR EASYBUILD)
     message(STATUS "Finding Readline")
-    find_package(Readline REQUIRED)
+    if(EASYBUILD)
+        find_package(Readline)
+    else()
+        find_package(Readline REQUIRED)
+    endif()
+endif()
+if(Readline_FOUND)
     message(STATUS "Finding Readline - found")
     include_directories(${Readline_INCLUDE_DIRS})
     set(SCIP_WITH_READLINE ON)
@@ -311,9 +324,15 @@ else()
 endif()
 
 # GMP
-if(GMP)
+if(GMP OR EASIBUILD)
     message(STATUS "Finding GMP")
-    find_package(GMP REQUIRED)
+    if(EASYBUILD)
+        find_package(GMP)
+    else()
+        find_package(GMP REQUIRED)
+    endif()
+endif()
+if(GMP_FOUND)
     message(STATUS "Finding GMP - found")
     include_directories(${GMP_INCLUDE_DIRS})
     set(SCIP_WITH_GMP ON)
@@ -324,9 +343,15 @@ else()
 endif()
 
 # look for presolvelib
-if(PAPILO)
+if(PAPILO OR EASYBUILD)
     message(STATUS "Finding PAPILO")
-    find_package(PAPILO CONFIG REQUIRED HINTS ${PAPILO_DIR})
+    if(EASYBUILD)
+        find_package(PAPILO CONFIG HINTS ${PAPILO_DIR})
+    else()
+        find_package(PAPILO CONFIG REQUIRED HINTS ${PAPILO_DIR})
+    endif()
+endif()
+if(PAPILO_FOUND)
     message(STATUS "Finding PAPILO - found")
     set(SCIP_WITH_PAPILO ON)
 else()
@@ -493,9 +518,15 @@ else()
 endif()
 
 # ZIMPL headers need to be copied to have the "zimpl/*.h" prefix
-if(ZIMPL)
+if(ZIMPL OR EASYBUILD)
     message(STATUS "Finding ZIMPL")
-    find_package(ZIMPL 3.5.0 CONFIG REQUIRED HINTS ${ZIMPL_DIR})
+    if(EASYBUILD)
+        find_package(ZIMPL 3.5.0 CONFIG HINTS ${ZIMPL_DIR})
+    else()
+        find_package(ZIMPL 3.5.0 CONFIG REQUIRED HINTS ${ZIMPL_DIR})
+    endif()
+endif()
+if(ZIMPL_FOUND)
     message(STATUS "Finding ZIMPL - found")
     set(SCIP_WITH_ZIMPL ON)
     include_directories(${ZIMPL_INCLUDE_DIRS})
@@ -519,9 +550,15 @@ else()
 endif()
 
 # IPOPT
-if(IPOPT)
+if(IPOPT OR EASYBUILD)
     message(STATUS "Finding IPOPT")
-    find_package(IPOPT 3.12.0 REQUIRED)
+    if(EASYBUILD)
+        find_package(IPOPT 3.12.0)
+    else()
+        find_package(IPOPT 3.12.0 REQUIRED)
+    endif()
+endif()
+if(IPOPT_FOUND)
     message(STATUS "Finding IPOPT - found")
     include_directories(${IPOPT_INCLUDE_DIRS})
     #on debian IPOPT package needs this definition to work
@@ -534,9 +571,15 @@ else()
 endif()
 
 # WORHP
-if(WORHP)
+if(WORHP OR EASYBUILD)
     message(STATUS "Finding WORHP")
-    find_package(WORHP REQUIRED)
+    if(EASYBUILD)
+        find_package(WORHP)
+    else()
+        find_package(WORHP REQUIRED)
+    endif()
+endif()
+if(WORHP_FOUND)
     message(STATUS "Finding WORHP - found")
     include_directories(${WORHP_INCLUDE_DIRS})
     set(nlpi ${nlpi} scip/nlpi_worhp.c)
