@@ -43,9 +43,14 @@ Unit tests
 ----------
 Testing
 -------
+
 Build system
 ------------
+
 ### Cmake
+
+- new option `-DEASYBIULD` that builds scip with dependencies on availability. Packages like Ipopt, Papilo, Readme, ZLIB, GMP, Worhp are automatically found and linked, otherwise ignored. This makes a quick build easier. It is by default set to off.
+
 ### Makefile
 
 Fixed bugs
